--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://mehulpillai.tech",
+    "homepage": "https://mehulpillai.tech/",
     "name": "reactweb",
     "version": "0.1.0",
     "private": true,
