--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,14 @@
 /build
 
 # misc
-/src/Consts.js
-/src/about/data.js
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
+yarn-error.log
+
+/src/data/Data.js
