--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "personal-site",
   "version": "0.1.0",
   "private": false,
-  "homepage": "http://meh430.github.io/site",
+  "homepage": "http://meh430.github.io",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
